[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/grey_button04.png" type="Texture" id=3]
[ext_resource path="res://Assets/green_button01.png" type="Texture" id=4]
[ext_resource path="res://Scenes/WaveControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UpgradesUI.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://arial.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
font_data = SubResource( 1 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 509.747, 272.4 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="EnemiesDestroyed" type="HBoxContainer" parent="HUD"]
margin_left = 838.947
margin_top = 21.0526
margin_right = 973.947
margin_bottom = 61.0526

[node name="Label" type="Label" parent="HUD/EnemiesDestroyed"]
margin_top = 13.0
margin_right = 131.0
margin_bottom = 27.0
text = "Enemies destroyed: "

[node name="Number" type="Label" parent="HUD/EnemiesDestroyed"]
margin_left = 135.0
margin_top = 13.0
margin_right = 135.0
margin_bottom = 27.0

[node name="MoneyEarned" type="HBoxContainer" parent="HUD"]
margin_left = 838.947
margin_top = 45.2631
margin_right = 973.947
margin_bottom = 85.2631

[node name="Label" type="Label" parent="HUD/MoneyEarned"]
margin_top = 13.0
margin_right = 99.0
margin_bottom = 27.0
text = "Money earned: "

[node name="Number" type="Label" parent="HUD/MoneyEarned"]
margin_left = 103.0
margin_top = 13.0
margin_right = 103.0
margin_bottom = 27.0

[node name="PlayerLife" type="TextureProgress" parent="HUD"]
margin_left = 354.0
margin_top = 551.0
margin_right = 645.0
margin_bottom = 588.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PlayerLife"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_right = 72.0

[node name="Label" type="Label" parent="HUD/PlayerLife/HBoxContainer"]
margin_top = 4.0
margin_right = 47.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "HP: "

[node name="CurrentHP" type="Label" parent="HUD/PlayerLife/HBoxContainer"]
margin_left = 51.0
margin_top = 4.0
margin_right = 90.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "100"

[node name="Label3" type="Label" parent="HUD/PlayerLife/HBoxContainer"]
margin_left = 94.0
margin_top = 4.0
margin_right = 101.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "/"

[node name="TotalHP" type="Label" parent="HUD/PlayerLife/HBoxContainer"]
margin_left = 105.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "100"

[node name="WaveControl" parent="HUD" instance=ExtResource( 5 )]
margin_left = -1.05267
margin_top = 18.9474
margin_right = 194.947
margin_bottom = 106.947

[node name="UpgradesUI" parent="HUD" instance=ExtResource( 6 )]

[node name="WaveManager" type="Node2D" parent="." groups=[
"WaveSpawn",
]]
